# dialogue

./: .gitignore  LICENSE  Main.hs  dialogue.cabal  results.json  sample.dialogue  stdinout-tester.cabal
